--- a/index.html
+++ b/index.html
@@ -3,7 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Developer Portfolio</title>
+    <link rel="stylesheet" href="/style/style.css" />
   </head>
-  <body></body>
+  <body class="open-sans-normal">
+    <header class="header">
+      <nav>
+        <h3 class="title">Ma<span class="titleColor">r</span>y</h3>
+        <ul>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Blog</a></li>
+          <li>
+            <a href=""><button class="btn-primary">Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="banner">
+        <div class="banner-content">
+          <h4 class="banner-greetings">Hi, I am</h4>
+          <h1 class="banner-title">Mary Hardy</h1>
+          <p class="desc">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sit
+            hic officiis? Vitae rem distinctio consequatur. Harum nisi inventore
+            earum.
+          </p>
+          <button class="btn-primary">Download CV</button>
+          <button class="btn-primary">Contact</button>
+        </div>
+
+        <img class="banner-pic" src="./images/hardy.png" alt="" />
+      </div>
+    </header>
+
+    <main></main>
+  </body>
 </html>
